--- a/public/about.html
+++ b/public/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
   <body>
     <h1>About</h1>
+    <img src="/img/blank-profile.png" />
   </body>
 </html>
